//plugins {
//    id 'java'
//}

allprojects {
    apply plugin: 'idea'

    group 'cn.edu.pku'
    version '1.0-SNAPSHOT'

    repositories {
        // speed up for developers in China
        maven { url 'https://maven.aliyun.com/repository/public' }
        maven { url 'https://maven.aliyun.com/repositories/jcenter' }
        maven { url 'https://maven.aliyun.com/repositories/google' }
        maven { url 'https://maven.aliyun.com/repository/central' }
        maven { url "https://jitpack.io" }

        mavenCentral()
        jcenter()
    }
}

subprojects {
    apply plugin: 'java'
    sourceCompatibility = '11'
    targetCompatibility = '11'

    dependencies {
        annotationProcessor 'org.atteo.classindex:classindex:3.10'
        implementation 'org.atteo.classindex:classindex:3.10'

        implementation('org.jgrapht:jgrapht-core:1.5.0') {
            force = true
        }
        implementation 'org.jgrapht:jgrapht-io:1.5.0'
        implementation 'commons-io:commons-io:2.8.0'
        implementation 'org.neo4j.driver:neo4j-java-driver:4.2.0'
        implementation 'org.slf4j:slf4j-log4j12:2.0.0-alpha2'
        implementation 'org.apache.logging.log4j:log4j-core:2.14.0'

        testImplementation 'org.assertj:assertj-core:3.18.1'
        testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
    }

    test {
        useJUnitPlatform()

        testLogging {
            exceptionFormat = 'full'
            events "passed", "skipped", "failed"
        }
    }
}

configure(subprojects.findAll { it.name != 'core' }) {
    dependencies {
        implementation project(':core')
    }
}
